<resources>
    <string name="app_name">CRA-Coimbra</string>
    <string name="modalidade">Modalidade:</string>
    <string name="titulo_consultar_prova">Escolha a Prova:</string>
    <string name="local">Local:</string>
    <string name="regulamento">Regulamento:</string>
    <string name="responsavel_cra">Responsável CRA:</string>
    <string name="juiz_arbitro">Juíz Árbitro:</string>
    <string name="sessao">Sessão</string>
    <string name="data">Data</string>
    <string name="hora">Hora</string>

    <string name="login_title">Iniciar Sessão</string>
    <string name="email">Endereço de Email</string>
    <string name="email_hint">Email</string>
    <string name="password">Palavra-Chave</string>
    <string name="password_hint">Password</string>
    <string name="title_activity_nav_drawer">CRA - Coimbra</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment1</string>
    <string name="select_competion">Seleccione a prova:</string>
    <string name="responder_pre_convocatoria_button">Submeter Resposta</string>
    <string name="alterar_disponibilidade_pre_convocatoria_button">Alterar Disponibilidade</string>
</resources>
