<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">


    <TableRow
        android:background="#E8EAF6"
        android:padding="5dp"
        android:id="@+id/firstrow">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="#212121"
            android:text="@string/sessao"
            android:textStyle="normal|bold" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="#212121"

            android:text="@string/data"
            android:textStyle="normal|bold" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#212121"

            android:layout_weight="1"
            android:text="@string/hora"
            android:textStyle="normal|bold" />
    </TableRow>

</TableLayout>